k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: guestflow
  labels:
    name: guestflow
    app: guestflow
